# lead-gen-api

./: .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250124_0001_initial_schema.py
src/leadgen/: __init__.py  config.py  main.py
src/leadgen/api/: deps.py
src/leadgen/api/v1/: jobs.py  leads.py  router.py  scraping.py  verification.py
src/leadgen/models/: __init__.py  base.py  company.py  database.py  email.py  job.py  lead.py  linkedin_profile.py  user.py
src/leadgen/repositories/: __init__.py  job_repo.py  lead_repo.py
src/leadgen/schemas/: __init__.py  common.py  job.py  lead.py
src/leadgen/services/enrichment/: __init__.py  domain_finder.py  email_verifier.py  pipeline.py
src/leadgen/services/scraping/: __init__.py  group_scraper.py
src/leadgen/utils/: multiple_emails.py
src/leadgen/workers/: __init__.py  celery_app.py
src/leadgen/workers/tasks/: ai.py  enrichment.py  imports.py  scraping.py  verification.py
tests/: conftest.py  test_scraping.py
