[project]
name = "leadgen-api"
version = "0.1.0"
description = "B2B Lead Generation API - LinkedIn scraping, email enrichment, and AI-powered outreach"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Junaid", email = "junaid@example.com"}
]
keywords = ["lead-generation", "linkedin", "scraping", "email-enrichment", "fastapi"]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "greenlet>=3.0.0",

    # Redis & Celery
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "flower>=2.0.1",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # LLM
    "litellm>=1.30.0",

    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",

    # Data Processing
    "pandas>=2.1.0",
    "python-dateutil>=2.8.2",

    # Utilities
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "orjson>=3.9.0",

    # DNS lookups (for domain finder)
    "dnspython>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leadgen"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["leadgen"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[project.scripts]
leadgen = "leadgen.main:run"
